--- a/build.gradle
+++ b/build.gradle
@@ -42,6 +42,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:$mybatisVersion"
+    implementation "com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3"
 
     compileOnly 'org.springframework.boot:spring-boot-devtools'
     compileOnly "org.projectlombok:lombok:$lombokVersion"
@@ -52,6 +53,8 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation"org.junit.jupiter:junit-jupiter:$junitVersion"
+
+    testCompileOnly "org.mybatis.spring.boot:mybatis-spring-boot-starter-test:$mybatisVersion"
 
 }
 
