[프로젝트 환경설정]   - 스프링부트 어플리케이션 설정   - 테스트DB 관련 설정

--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -21,7 +21,7 @@ spring:
   sql:
     init:
       schema-locations: classpath:init-data/h2db/schema.sql
-      #data-locations: classpath:init-data/h2db/data.sql
+      data-locations: classpath:init-data/h2db/data.sql
       username: membership
       password: membership
       mode: always
