--- a/build.gradle
+++ b/build.gradle
@@ -43,6 +43,7 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-hateoas'
     implementation "org.mybatis.spring.boot:mybatis-spring-boot-starter:$mybatisVersion"
     implementation "com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.3"
+    implementation 'org.modelmapper:modelmapper:2.3.8'
 
     compileOnly 'org.springframework.boot:spring-boot-devtools'
     compileOnly "org.projectlombok:lombok:$lombokVersion"
