--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -3,6 +3,20 @@ server:
   tomcat:
     uri-encoding: UTF-8
 
+spring:
+  datasource:
+    hikari:
+      auto-commit: false
+      connection-test-query: SELECT 1
+      minimum-idle: 10
+      maximum-pool-size: 50
+      transaction-isolation: TRANSACTION_READ_UNCOMMITTED
+      pool-name: pool-tester
+
+  jackson:
+    deserialization:
+      fail-on-unknown-properties: false
+
 mybatis:
   type-aliases-package: com.franc.app.vo
   mapper-locations: classpath:/mapper/**/*.xml
@@ -16,12 +30,5 @@ jasypt:
       prefix: ENC(
       suffix: )
 
-spring:
-  datasource:
-    hikari:
-      auto-commit: false
-      connection-test-query: SELECT 1
-      minimum-idle: 10
-      maximum-pool-size: 50
-      transaction-isolation: TRANSACTION_READ_UNCOMMITTED
-      pool-name: pool-tester
+
+
