[1차 개발완료] TODO :   - API : '적립내역 조회', '적립취소' 개발   - REST-API로 변경 => hateoas 적용   - 토큰인증 추가   - Spring Cloud를 통한 관리

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -4,6 +4,10 @@ server:
     uri-encoding: UTF-8
 
 spring:
+  output:
+    ansi:
+      enabled: always
+
   datasource:
     hikari:
       auto-commit: false
